--- a/source/Web.config
+++ b/source/Web.config
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <!--
   For more information on how to configure your ASP.NET application, please visit
   http://go.microsoft.com/fwlink/?LinkId=169433
@@ -64,6 +64,11 @@
     <modules>
       <remove name="FormsAuthentication" />
     </modules>
+        <defaultDocument>
+            <files>
+                <add value="DefaultMaster.aspx" />
+            </files>
+        </defaultDocument>
   </system.webServer>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
