about & portfolio are modified

--- a/source/Web.config
+++ b/source/Web.config
@@ -68,7 +68,7 @@
     </sessionState>
   </system.web>
   <system.webServer>
-    <modules>
+    <modules runAllManagedModulesForAllRequests="true">
       <remove name="FormsAuthentication"/>
     </modules>
     <defaultDocument>
